src/objects/Trail__c.object
<CustomObject>
    <description>TrailHead Challenge- (Data Modeling - Creating Custom Objects and Fields)

This challenge requires you to create a custom object with a few custom fields. This object will describe trail information for a park and hence will need to track name, distance and the last date it was inspected.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <label>Distance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Inspection_Date__c</fullName>
        <label>Last Inspection Date</label>
        <type>Date</type>
    </fields>
    <label>Trail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>